# mlixir

./: .gitignore  CMakeLists.txt  README.md  Taskfile.yml  build.sh
app/: CMakeLists.txt  main.cc
cmake/dependency_options/: index.cmake
docs/: _r_e_a_d_m_e_8md.html  app_2main_8cc.html  app_2main_8cc__incl.map  app_2main_8cc__incl.md5  dir_000000_000003.html  dir_000001_000003.html  dir_000004_000003.html  dir_44bc935f2bdadb215b678d4732ee7a42.html  dir_44bc935f2bdadb215b678d4732ee7a42_dep.map  dir_44bc935f2bdadb215b678d4732ee7a42_dep.md5  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.map  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.md5  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_97aefd0d527b934f1d99a682da8fe6a9_dep.md5  dir_d422163b96683743ed3963d4aac17747.html  dir_d422163b96683743ed3963d4aac17747_dep.map  dir_d422163b96683743ed3963d4aac17747_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e67173f2927c206301e5b9dd808c2ed1.html  dir_e67173f2927c206301e5b9dd808c2ed1_dep.map  dir_e67173f2927c206301e5b9dd808c2ed1_dep.md5  dir_e9740be0e6b1994ed8ecbcf3127ad49f.html  dir_f0ded951202e08cf970369d83dffa6fc.html  files.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  hooks_2_r_e_a_d_m_e_8md.html  index.html  libdeps_2_r_e_a_d_m_e_8md.html  md__r_e_a_d_m_e.html  md_hooks__r_e_a_d_m_e.html  md_libdeps__r_e_a_d_m_e.html  mlixir_8cc.html  mlixir_8cc__incl.map  mlixir_8cc__incl.md5  mlixir_8h.html  mlixir_8h__dep__incl.map  (+19 more)
docs/search/: all_1.js  all_4.js  all_6.js  files_0.js  functions_2.js  functions_3.js  functions_4.js  namespaces_0.js  pages_0.js  searchdata.js  variables_0.js
include/mlixir/: mlixir.h
lib/: CMakeLists.txt  mlixir.cc
tests/: CMakeLists.txt
tests/catch2_example/: main.cc
